# vtb_proj_web

./: .gitignore  README.md  main.py  pyproject.toml
client/: dialog_styles.css  icon_customImage.js  index.html  package-lock.json  package.json
client/public/: index.html
client/src/: App.js
client/src/components/: Map.js
client/src/panels/styles/: dialogStyle.css
client2/: index.html
server/src/: graph.html  main.py  map.html  test.py
server/src/modules/: database.py  db.db
src/: main.py
src/modules/: database.py  db.db  generate_data.py  old.py  utils.py  yamaps_api.py
src/static/: dialog.js  dialog_styles.css  icon_customImage.js  index.html  map.js  map_styles.css  test.html
src/static.py/: index.html
static/: index.html
vtb_proj_web 3/: README.md  test.py
vtb_proj_web 3/modules/: database.py  old.py
vtb_proj_web 3/static/: dialog.js  index.html
