[tool.poetry]
name = "vtb-proj-web"
version = "0.1.0"
description = ""
authors = ["Nikita Sokov <n.nosov@installbiz.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
aiosqlite = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"